# codecrafters-shell-rust

./: Cargo.toml  README.md
src/: builtins.rs  completer.rs  context.rs  error.rs  main.rs  parser.rs  resolver.rs  shell.rs
src/builtins/: cd.rs  complete.rs  echo.rs  exit.rs  history.rs  jobs.rs  pwd.rs  type.rs
