[package]
name = "codecrafters-shell"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"
rust-version = "1.95"

[dependencies]
anyhow = "1.0.102"                                # error handling
bytes = "1.11.1"                                  # helps manage buffers
rustyline = {version = "18.0.0", features = ["derive"]} # line editing
thiserror = "2.0.18"                             # error handling
